# mswarriors

./: .gitattributes  ANALYSIS_REPORT.md  ClinicalTrials.gov API.md  PROJECT_SUMMARY.md  README.md  TIMEFRAME_ANALYSIS.md  analyze_clinicaltrials_2020_2025.py  analyze_ctis.py  analyze_ctis_2020_2025.py  analyze_ictrp_2020_2025.py  analyze_registry_comparison.py  analyze_trials.py  check_ctis_columns.py  check_ictrp_columns.py  check_sponsor_classes.py  fetch_clinicaltrials_data.py  funding_insights.py  main.py  ms_analysis_pipeline.py  project_status.py  pyproject.toml  test_clinicaltrials_api.py
analysis_2001_2025/reports/: CTIS_GROUPING_STRATEGY.md  PIPELINE_SUMMARY.md  pipeline_summary.json
analysis_2020_2025/reports/: CROSS_TIMEFRAME_COMPARISON.md  MS_ANALYSIS_REPORT_2020_2025.md  PIPELINE_SUMMARY.md  TOP_SPONSORS_RECENT_TRIALS_2020_2025.md  pipeline_summary.json
data/: CTIS_trials_20250924.csv  clinicaltrials_ms_20250925.csv  clinicaltrials_ms_20250925.json
scripts/archive/: analyze_clinicaltrials.py  analyze_clinicaltrials_dates.py  analyze_ctis_2020_2025.py  analyze_dates.py  analyze_top_sponsors_recent_trials_2020_2025.py  analyze_trials.py  check_sponsor_types.py  create_cross_registry_charts_2020_2025.py  funding_insights.py
scripts/pipeline/: analyze_ctis_2020_2025.py  analyze_ictrp_2020_2025.py
scripts/utils/: sponsor_analysis.py
