[project]
name = "mswarriors"
version = "0.1.0"
description = "Analysis of clinical trials registered on https://trialsearch.who.int/"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
